--- a/home1/src/main/resources/messages_ru_RU.properties
+++ b/home1/src/main/resources/messages_ru_RU.properties
@@ -4,3 +4,4 @@ msg.enterTest=Введите номера верных вариантов чер
 msg.enterAnswer=Введите ответ: 
 msg.testComplete=Тест завершен
 msg.testResult=Процент правильных ответов: {0}
+msg.runTest=Сначала пройдите тест
