--- a/home1/src/main/resources/messages_en_US.properties
+++ b/home1/src/main/resources/messages_en_US.properties
@@ -4,3 +4,4 @@ msg.enterTest=Enter the numbers of the valid options, separated by commas:
 msg.enterAnswer=Enter answer: 
 msg.testComplete=Test complete
 msg.testResult=Percentage of correct answers: {0}
+msg.runTest=First run test
