--- a/home16-android/src/main/res/values/strings.xml
+++ b/home16-android/src/main/res/values/strings.xml
@@ -1,9 +1,13 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Library</string>
     <string name="title_item_detail">Item Detail</string>
     <string name="title_activity_author">AuthorActivity</string>
     <string name="id">ID</string>
     <string name="name">Name</string>
     <string name="title">Title</string>
     <string name="delete">Delete</string>
+    <string name="authors">Authors</string>
+    <string name="books">Books</string>
+    <string name="author">Author</string>
+    <string name="book">Book</string>
 </resources>
