--- a/home16-android/src/main/res/values/strings.xml
+++ b/home16-android/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="books">Books</string>
     <string name="author">Author</string>
     <string name="book">Book</string>
+    <string name="genres">Genres</string>
+    <string name="genre">Genre</string>
+    <string name="description">Description</string>
 </resources>
